dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderLine__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <description>Relation to Main Product</description>
        <inlineHelpText>Relation to Main Product</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>OrderLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Costs__c</fullName>
        <description>Relation to Project Costs selected for this Order Line</description>
        <formula>IF( ISBLANK( Selected_Project_Costs__c ) ,&quot;&quot;, HYPERLINK(&quot;https://tapp0.salesforce.com/&quot; + Selected_Project_Costs__c, &quot;Go to Project Costs&quot;, &quot;_top&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Relation to Project Costs selected for this Order Line</inlineHelpText>
        <label>Project Costs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of products (not used currently)</description>
        <inlineHelpText>Quantity of products</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_For_Provisioning__c</fullName>
        <description>If Order Line is Selcted by Customer, Configured and Expected Delivery Date is provided then is ready for provisioning. Field needed for guide (Help on Order).</description>
        <formula>IF(AND( 
Selected_by_customer__c = true, 
TEXT(Status__c ) = &apos;Configured&apos;, 
NOT( ISNULL(ExpectedDeliveryDate__c ) ) 
), 
&apos;true&apos;, 
&apos;false&apos;)</formula>
        <inlineHelpText>If Order Line is Selcted by Customer, Configured and Expected Delivery Date is provided then is ready for provisioning. Field needed for guide (Help on Order).</inlineHelpText>
        <label>Ready For Provisioning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RealDeliveryDateSetDate__c</fullName>
        <description>Real Delivery Date Set Date</description>
        <inlineHelpText>Date, when Real Delivery Date has been set</inlineHelpText>
        <label>RDDSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RealDeliveryDate__c</fullName>
        <description>Real Delivery Date</description>
        <inlineHelpText>RDD - Real Delivery Date set automatically when the task with BA verification started (only if RDD was empty). RDD can be also set manually by PM.</inlineHelpText>
        <label>Real Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_of_Delay_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag indicates if any Reasons of Delay were set for the Order Line</description>
        <inlineHelpText>The flag indicates if any Reasons of Delay were set for the Order Line</inlineHelpText>
        <label>Reason of Delay Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_of_Delay_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is updated by time dependant workflow in order to force Order Line trigger to add standard Task to PM&apos;s calendar.</description>
        <inlineHelpText>Indicates, whether there should be Task added automatically for Project Manager about providing reason of delay</inlineHelpText>
        <label>Reason of Delay Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_of_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enforce Reason of Delay</description>
        <inlineHelpText>Enforce Reason of Delay setting while executing Provisioning Plan</inlineHelpText>
        <label>Reason of Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recalculate_FD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for data cleaning; when set from unchecked to checked triggers recalculation of Financial Dimension IDs / GTS Codes for all Pricing Items under gived Order Line</description>
        <inlineHelpText>Flag for data cleaning; when set from unchecked to checked triggers recalculation of Financial Dimension IDs / GTS Codes for all Pricing Items under gived Order Line</inlineHelpText>
        <label>Recalculate FD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Document__c</fullName>
        <description>Shows direct links to Contract and Service Order</description>
        <formula>HYPERLINK(&apos;/&apos;+ Service_Order__r.Id, Service_Order__r.Document_Number__c, &apos;_self&apos;) &amp;BR()&amp;
HYPERLINK(&apos;/&apos;+ CContract__r.Id, CContract__r.Document_Number__c, &apos;_self&apos;)</formula>
        <inlineHelpText>Shows direct links to Contract and Service Order</inlineHelpText>
        <label>Related Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Line_Type__c</fullName>
        <description>Line Type for Reporting (mapping of Line Type to one of the values needed in the Report)</description>
        <formula>IF( AND (ISPICKVAL(Line_Type__c, &quot;New service&quot;), NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;))), 
&quot;Gross sales&quot;, 
IF( AND (OR(ISPICKVAL(Line_Type__c, &quot;Upgrade&quot;),ISPICKVAL(Line_Type__c, &quot;Technical Change&quot;)), NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;))), 
&quot;Upgrades&quot;, 
IF( AND (ISPICKVAL(Line_Type__c, &quot;Price Change&quot;), NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;))), 
&quot;Price changes&quot;, 
IF( AND (ISPICKVAL(Line_Type__c, &quot;Downgrade&quot;), NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;))), 
&quot;Downgrades&quot;, 
IF( ISPICKVAL(Line_Type__c, &quot;Disconnection&quot;), 
IF ( ISPICKVAL(Status__c, &quot;Cancelled&quot;), &quot;Win back&quot;, &quot;Disconnections&quot;), 
IF ( ISPICKVAL(Status__c, &quot;Cancelled&quot;), &quot;Cancellations&quot;, &quot;Rest&quot;) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Line Type for Reporting</inlineHelpText>
        <label>Reporting Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Amount__c</fullName>
        <description>Estimated value of requested modification / installation (not used anymore)</description>
        <inlineHelpText>Estimated value of requested modification / installation (not used anymore)</inlineHelpText>
        <label>Request Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Received_Date__c</fullName>
        <description>Date, when request for given installation / modification was received</description>
        <inlineHelpText>Date, when request for given installation / modification was received</inlineHelpText>
        <label>Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resignation_Mode__c</fullName>
        <description>Used for communication with eWegorz and disconnection lines only; [PROV]_PL_004: Integration with eWęgorz (aDSL and SHDSL services):</description>
        <inlineHelpText>Used for communication with eWegorz and disconnection lines only</inlineHelpText>
        <label>Resignation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Retract from Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breach of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vindication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resignation_Reason__c</fullName>
        <description>Used for communication with eWegorz and disconnection lines only; [PROV]_PL_004: Integration with eWęgorz (aDSL and SHDSL services):</description>
        <inlineHelpText>Used for communication with eWegorz and disconnection lines only;</inlineHelpText>
        <label>Resignation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Service not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of continuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes in Regulations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Calculation_Selected_by_Customer__c</fullName>
        <description>List of selected Calculations containing this Order Line</description>
        <inlineHelpText>List of selected Calculations containing this Order Line</inlineHelpText>
        <label>SFDC Calculation Selected by Customer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Calculations__c</fullName>
        <description>List of Calculations containing this Order Line</description>
        <inlineHelpText>List of Calculations containing this Order Line</inlineHelpText>
        <label>SFDC Calculations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <description>ID generated by Product Configurator in order to update the record after modification</description>
        <externalId>true</externalId>
        <inlineHelpText>ID generated by Product Configurator in order to update the record after modification</inlineHelpText>
        <label>SFDC_ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SO_Valid_From__c</fullName>
        <description>Special Offer validity starting date</description>
        <inlineHelpText>Special Offer validity starting date</inlineHelpText>
        <label>Special Offer Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Valid_To__c</fullName>
        <description>Special Offer validity end date</description>
        <inlineHelpText>Special Offer validity end date</inlineHelpText>
        <label>Special Offer Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <description>Price for configured installation / modification (not used anymore)</description>
        <inlineHelpText>Price for configured installation / modification (not used anymore)</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <description>Indicates whether this deal is Retail or Wholesale</description>
        <inlineHelpText>Indicates whether this deal is Retail or Wholesale</inlineHelpText>
        <label>Sales Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SelectedOfferId__c</fullName>
        <description>Id of selected Offer required during product configuration</description>
        <inlineHelpText>Id of selected Offer required during product configuration</inlineHelpText>
        <label>SelectedOfferId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_BCT_Calculation__c</fullName>
        <description>Number of BCT Calculation that was used for realization of this Order Line</description>
        <inlineHelpText>Number of BCT Calculation that was used for realization of this Order Line</inlineHelpText>
        <label>Selected BCT Calculation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Costing_Line__c</fullName>
        <description>Id of Costing Line containing solution selected for realization</description>
        <inlineHelpText>Id of Costing Line containing solution selected for realization</inlineHelpText>
        <label>Selected Costing Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Project_Costs__c</fullName>
        <description>Id of Project Costs related to this Order Line</description>
        <inlineHelpText>Id of Project Costs related to this Order Line</inlineHelpText>
        <label>Selected Project Costs</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Revenue_Order_Line__c</fullName>
        <description>Revenue Order Line related to this Order Line</description>
        <inlineHelpText>Revenue Order Line related to this Order Line</inlineHelpText>
        <label>Selected Revenue Order Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Special_Offer_Id__c</fullName>
        <description>ID of selected Special Offer, that should be applied during configuration of this Line</description>
        <inlineHelpText>ID of selected Special Offer, that should be applied during configuration of this Line</inlineHelpText>
        <label>Selected Special Offer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_by_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line was selected to be further processed; If this flag is not selected, then during submitting Order, Line will be cancelled</description>
        <inlineHelpText>Indicates whether this line was selected to be further processed; If this flag is not selected, then during submitting Order, Line will be cancelled</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceOrder__c</fullName>
        <description>Relation to Service Order</description>
        <inlineHelpText>Relation to Service Order</inlineHelpText>
        <label>Service Order</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Lines (Service Order)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Selected Installed Bundle that is modified by this Order Line</description>
        <inlineHelpText>Selected Installed Bundle that is modified by this Order Line</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_ID__c</fullName>
        <description>Implemented as part of [PROV]_PL_313 Service ID</description>
        <inlineHelpText>This is bundle Service ID. This field corresponds to &quot;Service ID / Local Reference&quot; field on Service Bundle.</inlineHelpText>
        <label>Service ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <description>Relation to Service Order assigned to this Order Line</description>
        <inlineHelpText>Relation to Service Order assigned to this Order Line</inlineHelpText>
        <label>Service Order (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Order Lines (Service Order)</relationshipLabel>
        <relationshipName>OrderLinesSO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skip_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Implemented as a part of [PROV_SK_1030 - Suspension and Release Orders - automated process]</description>
        <inlineHelpText>When this flag is selected, automatic mechanism for Provisioning Plan assignment and submit will skip this Order Line</inlineHelpText>
        <label>Skip AP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Service_Bundle__c</fullName>
        <description>Source service bundle lookup for different migration/cession lines</description>
        <inlineHelpText>Source service bundle lookup for different migration/cession lines</inlineHelpText>
        <label>Source Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Order Lines (Source Service Bundle)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpecialOffer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Order Line was created from Special Offer</description>
        <inlineHelpText>Indicates whether Order Line was created from Special Offer</inlineHelpText>
        <label>Special Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartBillingDate__c</fullName>
        <description>Start Billing Date</description>
        <inlineHelpText>SBD - Start Billing Date. If SBD is empty or equals Real Delivery Date it should change along with RDD; otherwise it can be set manually by Order Entry.</inlineHelpText>
        <label>Start Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Billing_Customer__c</fullName>
        <description>Date, when Billing for given Service should start</description>
        <inlineHelpText>Date, when Billing for given Service should start</inlineHelpText>
        <label>Start Billing Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Order Line:
New - newly created Order Line without configuration saved yet (or with configuration not required); 
Configured - configuration of this Order Line was saved at least once; 
Submitted - Provisioning Plan has been assigned to OL and started; 
Completed - processing of Provisioning Plan has been finished; 
In Cancellation - cancellation process is in progress for this Order Line; 
Cancelled - Order Line has been Cancelled</description>
        <inlineHelpText>Status of the Order Line:
New - newly created Order Line without configuration saved yet; 
Configured - configuration of this Order Line was saved at least once; 
Submitted - Provisioning Plan has been assigned to OL a</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Configured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submited_Date__c</fullName>
        <description>Date when the Order Line has been submited (status changed)</description>
        <inlineHelpText>Date when the Order Line has been submited (status changed)</inlineHelpText>
        <label>Submited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Preparation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox determines if Cession,change BA order line has been already submitted for batch preparing</description>
        <inlineHelpText>Checkbox determines if Cession,change BA order line has been already submitted for batch preparing</inlineHelpText>
        <label>Submitted for Preparation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>Supplier involved in provisioning process (related Account)</description>
        <inlineHelpText>Supplier involved in provisioning process (related Account)</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppliers_Contact__c</fullName>
        <description>Supplier&apos;s employee - contact from related Supplier Account</description>
        <inlineHelpText>Supplier&apos;s employee - contact from related Supplier Account</inlineHelpText>
        <label>Supplier&apos;s Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Lines (Supplier&apos;s Contact)</relationshipLabel>
        <relationshipName>Order_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Validity date of costs estimated on Order Line</description>
        <inlineHelpText>Validity date of costs estimated on Order Line</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version_number__c</fullName>
        <description>Field which is storing first version of bundle in CSR in case we will want to restore previous configuration (CSR task rollback)</description>
        <inlineHelpText>Field which is storing first version of bundle in CSR in case we will want to restore previous configuration (CSR task rollback)</inlineHelpText>
        <label>Version number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Structure__c</fullName>
        <description>Direct link to Service Bundle Structure</description>
        <formula>IF( ISBLANK(Service_Bundle__c), &apos;&apos;, HYPERLINK(&apos;https://c.eu0.visual.force.com/apex/View_StructureforBundle?scontrolCaching=1&amp;id=&apos; + Service_Bundle__c , &apos;View&apos; , &apos;_blank&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Direct link to Service Bundle Structure</inlineHelpText>
        <label>View Structure</label>
        <type>Text</type>
    </fields>
    <label>Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LineNumber__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Plan_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCancelled</fullName>
        <columns>NAME</columns>
        <columns>LineNumber__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Plan_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>AllCancelled</label>
    </listViews>
    <listViews>
        <fullName>Migracie</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CProduct__c</columns>
        <columns>Order_Type__c</columns>
        <columns>OL_Completed_State_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CProduct__c</field>
            <operation>startsWith</operation>
            <value>ADSL_</value>
        </filters>
        <filters>
            <field>Line_Type__c</field>
            <operation>equals</operation>
            <value>Migration Installation</value>
        </filters>
        <label>Migracie</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OL_older_than_90_days</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>GTS_Location_from_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>GTS_Location_from_Order__c</field>
            <operation>equals</operation>
            <value>GTS Slovakia</value>
        </filters>
        <label>SK OLs older than 90 days</label>
        <sharedTo>
            <groups>Administrators</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>With_CSR_ID_not_installation</fullName>
        <columns>NAME</columns>
        <columns>OrderLookup__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Service_Bundle__c</columns>
        <columns>CSR_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_Type__c</field>
            <operation>notEqual</operation>
            <value>New Service</value>
        </filters>
        <filters>
            <field>CSR_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>With CSR ID not installation</label>
    </listViews>
    <nameField>
        <label>Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Accounts_Contact_selection</fullName>
        <active>false</active>
        <description>Selected Account&apos;s Contact person must belong to the Account.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Accounts_Contact__c)), Accounts_Contact__r.AccountId != OrderLookup__r.Account__r.Id)</errorConditionFormula>
        <errorDisplayField>Accounts_Contact__c</errorDisplayField>
        <errorMessage>Selected Account&apos;s Contact person does not belong to the Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CDD_Change_Blockade</fullName>
        <active>true</active>
        <description>https://helpdeskce.in.gtsce.com/browse/CECOLPL-46</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(CommittedDeliveryDate__c))), PRIORVALUE(CommittedDeliveryDate__c) != CommittedDeliveryDate__c ),true, false)</errorConditionFormula>
        <errorMessage>Commited Delivery Date can not be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_selection</fullName>
        <active>false</active>
        <description>Selected contract on Order Line must belong to the same Account as Order.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( Contract__c )), 00N200000026Lsp.Account != OrderLookup__r.Account__r.Id )</errorConditionFormula>
        <errorMessage>Selected contract does not belong to the Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockCommittedDeliveryDate</fullName>
        <active>false</active>
        <description>If Committed Delivery Date is set should be locked for edition</description>
        <errorConditionFormula>AND(NOT(ISBLANK(PRIORVALUE(CommittedDeliveryDate__c))), ISCHANGED(CommittedDeliveryDate__c))</errorConditionFormula>
        <errorMessage>After &apos;Committed Delivery Date&apos; is set can not be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Modification_of_Costs_after_Submit</fullName>
        <active>true</active>
        <description>Modification of Costs after Submit is not allowed</description>
        <errorConditionFormula>AND(OR( ISCHANGED(Valid_To__c), ISCHANGED(Opex_Monthly__c), ISCHANGED(Opex_One_off__c), ISCHANGED(Capex_One_off__c), ISCHANGED(Capex_Reuseable__c)), NOT(ISPICKVAL(OrderLookup__r.Status__c, &apos;New&apos;)) , NOT(ISPICKVAL(OrderLookup__r.Status__c, &apos;Budgetary Quotation&apos;)), NOT(ISPICKVAL(OrderLookup__r.Status__c, &apos;Firm Quotation&apos;)), NOT(ISPICKVAL(OrderLookup__r.Status__c, &apos;In Progress&apos;)), NOT(ISPICKVAL(OrderLookup__r.Status__c, &apos;On Hold&apos;)), NOT( $Profile.Name = &apos;System Administrator&apos;))</errorConditionFormula>
        <errorMessage>Modification of Proposal Costs section after Submit is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Suppliers_Contact_selection</fullName>
        <active>false</active>
        <description>Supplier&apos;s Contact person must belong to the selected Supplier.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Suppliers_Contact__c)), Suppliers_Contact__r.AccountId != Supplier__r.Id)</errorConditionFormula>
        <errorDisplayField>Suppliers_Contact__c</errorDisplayField>
        <errorMessage>Supplier&apos;s Contact person does not belong to the selected Supplier.</errorMessage>
    </validationRules>
</CustomObject>